--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&family=Splash&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
+* {
+    cursor: none;
+}
+
 body {
     margin: 0;
     /* font-family: 'Major Mono Display', monospace; */
@@ -82,6 +86,13 @@ body {
     border-radius: 50%;
     position: absolute;
     mix-blend-mode: difference;
+}
+#smolcircle {
+    width: 5px;
+    height: 5px;
+    background: black;
+    border-radius: 50%;
+    position: absolute;
 }
 
 h1, a {
